| Bug #57481 | 'multi range read' may fail to close completed NdbScanOperations | ||
|---|---|---|---|
| Submitted: | 15 Oct 2010 12:22 | Modified: | 25 Nov 2010 21:51 |
| Reporter: | Ole John Aske | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1.47-ndb-7.1.9 | OS: | Any |
| Assigned to: | Ole John Aske | CPU Architecture: | Any |
[15 Oct 2010 12:22]
Ole John Aske
[15 Oct 2010 12:29]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/120835 3880 Ole John Aske 2010-10-15 Proposed patch for bug#57481 ha_ndbcluster::read_multi_range_first() should close any previous completed scan operations. MTR result file *not* included due to its size.....
[24 Nov 2010 16:39]
Bugs System
Pushed into mysql-5.1-telco-6.3 5.1.51-ndb-6.3.40 (revid:jonas@mysql.com-20101124163758-ylwcnqce1piv1rut) (version source revid:jonas@mysql.com-20101124131609-7eegarkflxjvcxmq) (merge vers: 5.1.51-ndb-6.3.40) (pib:23)
[24 Nov 2010 17:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/124869 3346 Jonas Oreland 2010-11-24 ndb - bug#57481 - make sure to close previous mrr scans, before starting new
[24 Nov 2010 17:50]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.51-ndb-7.0.21 (revid:jonas@mysql.com-20101124174527-2n60gu2e0wx7an60) (version source revid:jonas@mysql.com-20101124174527-2n60gu2e0wx7an60) (merge vers: 5.1.51-ndb-7.0.21) (pib:23)
[24 Nov 2010 17:53]
Jonas Oreland
pushed to 6.3.40, 7.0.21 and 7.1.10
[25 Nov 2010 21:51]
Jon Stephens
Documented bugfix in the NDB-6.3.40, 7.0.21, and 7.1.10 changelogs as follows:
In some circumstances, it was possible for mysqld to begin a new
multi-range read scan without having closed a previous one. This
could lead to exhaustion of all scan operation objects,
transaction objects, or lock objects (or some combination of
these) in NDB, causing queries to fail with such errors as Lock
wait timeout exceeded or Connect failure - out of connection
objects.
Closed.
