ndb - bug#57481 - make sure to close previous mrr scans, before starting new